# prj-logging-tracing-v1

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
examples/fluentbit-logger/: README.md
examples/fluentd-logger/: BUILD.bazel  README.md  app.go
examples/long-run-computation/: BUILD.bazel  README.md  computation-traces.txt  main.go
examples/long-run-computation/app/: BUILD.bazel  app.go  computation.go
utils/scripts/: init-networks.sh
