load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "long-run-computation_lib",
    srcs = ["main.go"],
    importpath = "github.com/Gogistics/prj-logging-tracing-v1/examples/long-run-computation",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/long-run-computation/app",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//semconv/v1.7.0:v1_7_0",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)

go_binary(
    name = "long-run-computation",
    embed = [":long-run-computation_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "opentelemetry-long-run-computation_lib",
    srcs = ["main.go"],
    importpath = "github.com/Gogistics/prj-logging-tracing-v1/examples/opentelemetry-long-run-computation",
    visibility = ["//visibility:private"],
    deps = [
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.7.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
    ],
)
